issue of screen being too wide due to css hack for clock - fixed.  Also lighter color for current hour

--- a/client/mosaic.css
+++ b/client/mosaic.css
@@ -44,11 +44,11 @@ html, body {
 	font-size: 150% !important;
 	margin-top: 5px;
 	position: absolute;
-	width: 100%;
+	width: 98.8%;
 }
 #clockWrapper{
 	margin-left: auto;
-	margin-right: 49.6%;
+	margin-right: 49%;
 	float: right;
 }
 #hrsClock{
@@ -139,7 +139,7 @@ html, body {
 	border-left: 1px solid #232521;
 }
 .currentHour{
-	background-color: #008db3;
+	background-color: #50524c;
 }
 #scrollyMcScrolls{
 	width: 3480px;
