--- a/public/css/droid.css
+++ b/public/css/droid.css
@@ -2,5 +2,5 @@
 	font-size: 120% !important;
 }
 .timeLineGuestRow {
-	height: 250px !important;
+	height: 325px !important;
 }
